--- a/DailyChallenge/DailyChallenge/DailyChallenge-war/nbproject/project.properties
+++ b/DailyChallenge/DailyChallenge/DailyChallenge-war/nbproject/project.properties
@@ -42,7 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.DailyChallenge-ejb.dist}
+    ${reference.DailyChallenge-ejb.dist}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
