José: CopyLib Task hinzugefügt

--- a/DailyChallenge/DailyChallenge/nbproject/project.properties
+++ b/DailyChallenge/DailyChallenge/nbproject/project.properties
@@ -37,4 +37,6 @@ project.DailyChallenge-war=DailyChallenge-war
 reference.DailyChallenge-ejb.dist-ear=${project.DailyChallenge-ejb}/dist/DailyChallenge-ejb.jar
 reference.DailyChallenge-war.dist-ear=${project.DailyChallenge-war}/dist/DailyChallenge-war.war
 resource.dir=setup
+run.classpath=\
+    ${libs.CopyLibs.classpath}
 source.root=.
