José: JAVA DB DRIVER-Library als Propertie

--- a/DailyChallenge/DailyChallenge/nbproject/project.properties
+++ b/DailyChallenge/DailyChallenge/nbproject/project.properties
@@ -38,5 +38,6 @@ reference.DailyChallenge-ejb.dist-ear=${project.DailyChallenge-ejb}/dist/DailyCh
 reference.DailyChallenge-war.dist-ear=${project.DailyChallenge-war}/dist/DailyChallenge-war.war
 resource.dir=setup
 run.classpath=\
-    ${libs.CopyLibs.classpath}
+    ${libs.CopyLibs.classpath}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 source.root=.
