--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -17,9 +17,8 @@
         <junit printsummary="yes" haltonfailure="yes">
 
           <classpath>
-            <pathelement location="${project.class.path}"/>
-            <pathelement location="${build.tests}"/>
-            <pathelement path="${java.class.path}"/>
+            <pathelement location="lib/junit-4.12.jar"/>
+            <pathelement location="lib/hamcrest-core-1.3.jar"/>
           </classpath>
 
           <test name="test.daily.test.beans.Test_AnwenderBean"
