--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -14,7 +14,7 @@
     
     <target name="junit" >
 
-        <junit printsummary="yes" haltonfailure="yes">
+        <junit printsummary="yes" haltonfailure="no">
 
           <classpath>
             <pathelement location="lib/junit-4.12.jar"/>
