--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -12,7 +12,7 @@
     <import file="nbproject/build-impl.xml"/>
     
     
-    <target name="junit" >
+    <target name="junit" depends="resolve">
 
         <junit printsummary="yes" haltonfailure="no">
 
@@ -21,12 +21,11 @@
             <pathelement location="lib/hamcrest-core-1.3.jar"/>
           </classpath>
 
-          <test name="test.daily.test.beans.Test_AnwenderBean"
+          <test name="daily.test.beans.Test_AnwenderBean"
                    haltonfailure="no" outfile="Result AnwenderBean">
 
             <formatter type="plain"/>
-            <formatter type="xml"/>
-
+            
           </test>
 
         </junit>
