--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -21,7 +21,7 @@
             <pathelement location="lib/hamcrest-core-1.3.jar"/>
           </classpath>
 
-          <test name="daily.test.beans.Test_AnwenderBean"
+          <test name="daily.test.beans.Test_AnwenderBean.java"
                    haltonfailure="no" outfile="Result AnwenderBean">
 
             <formatter type="plain"/>
