--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -14,20 +14,21 @@
     
     <target name="junit">
 
-        <junit printsummary="yes" haltonfailure="no">
+        <junit printsummary="yes" haltonfailure="yes">
 
-          <classpath>
+          <!--<classpath>
             <pathelement location="lib/junit-4.12.jar"/>
             <pathelement location="lib/hamcrest-core-1.3.jar"/>
             <pathelement location="${project.class.path}"/>
             <pathelement location="${build.tests}"/>
             <pathelement path = "${java.class.path}$"/>
-          </classpath>
+          </classpath>-->
 
           <test name="test.daily.test.beans.Test_AnwenderBean"
                    haltonfailure="no" outfile="Result AnwenderBean">
 
             <formatter type="plain"/>
+            <formatter type="xml"/>
             
           </test>
 
