José: Change in Build

--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -33,7 +33,7 @@
         </javac>
     </target>
     
-    <target name="junit" depends="compile">
+    <target name="junit" depends="compileUnitTests">
 
         <junit printsummary="yes" haltonfailure="yes">
 
