José: Build.xml geändert

--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -10,6 +10,40 @@
 <project name="DailyChallenge" default="default" basedir="." xmlns:ear="http://www.netbeans.org/ns/j2ee-earproject/2">
     <description>Builds, tests, and runs the project DailyChallenge.</description>
     <import file="nbproject/build-impl.xml"/>    
+    
+    <property name="src.dir" location="DailyChallenge-ejb/src" />
+    <property name="test.dir" location="DailyChallenge-ejb/test" />
+    <property name="build.dir" location="compileTest/build" />
+
+    <path id="junit.class.path">
+      <pathelement location="C:/Programmierung/apache-ant-1.9.4/lib/junit-4.12.jar" />
+        <fileset dir="C:/Programmierung/GlassFishServer/glassfish/modules" >
+                <include name="**/*.jar"/>
+        </fileset>
+        
+      <pathelement location="${build.dir}" />
+      <pathelement location="C:/Users/José Montes/Desktop/DailyChallenge/DailyChallenge/DailyChallenge/DailyChallenge/compileTest/build/META-INF/persistence.xml" />
+    </path>
+    
+    <target name="compile">
+        <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="10">
+        <classpath refid="junit.class.path" />
+        </javac>
+      
+        <javac srcdir="${test.dir}" destdir="${build.dir}" includeantruntime="10">
+          <classpath refid="junit.class.path" />
+        </javac>
+    </target>
+    
+    <target name="unit-test" depends="compile">
+        <junit haltonerror="yes">
+            <classpath refid="junit.class.path" />
+            
+            <test name="daily.test.beans.Test_AnwenderBean" />
+            <formatter type="plain" />
+        </junit>
+    </target>
+              
     <!--
 
     There exist several targets which are by default empty and which can be 
