--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -11,7 +11,7 @@
     <description>Builds, tests, and runs the project DailyChallenge.</description>
     <import file="nbproject/build-impl.xml"/>    
     
-    <property name="src.dir" location="DailyChallenge-ejb/src" />
+    <!--<property name="src.dir" location="DailyChallenge-ejb/src" />
     <property name="test.dir" location="DailyChallenge-ejb/test" />
     <property name="build.dir" location="compileTest/build" />
 
@@ -42,7 +42,7 @@
             <test name="compileTest.build.daily.test.beans.Test_AnwenderBean" />
             <formatter type="plain" />
         </junit>
-    </target>
+    </target>-->
               
     <!--
 
