José:Library hinzugefügt

--- a/DailyChallenge/DailyChallenge/nbproject/project.properties
+++ b/DailyChallenge/DailyChallenge/nbproject/project.properties
@@ -39,5 +39,6 @@ reference.DailyChallenge-war.dist-ear=${project.DailyChallenge-war}/dist/DailyCh
 resource.dir=setup
 run.classpath=\
     ${libs.CopyLibs.classpath}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${libs.junit_4.classpath}
 source.root=.
