--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -11,12 +11,14 @@
     <description>Builds, tests, and runs the project DailyChallenge.</description>
     <import file="nbproject/build-impl.xml"/>    
     
-    <!--<property name="src.dir" location="DailyChallenge-ejb/src" />
+    <property name="src.dir" location="DailyChallenge-ejb/src" />
     <property name="test.dir" location="DailyChallenge-ejb/test" />
     <property name="build.dir" location="DailyChallenge-ejb/build" />
 
     <path id="junit.class.path">
       <pathelement location="C:/Programmierung/apache-ant-1.9.4/lib/junit-4.12.jar" />
+      <pathelement location="C:/Programmierung/apache-ant-1.9.4/lib/hamcrest-core-1.3.jar" />
+      
         <fileset dir="C:/Programmierung/GlassFishServer/glassfish/modules" >
                 <include name="**/*.jar"/>
         </fileset>
@@ -24,7 +26,17 @@
       <pathelement location="${build.dir}" />
       <pathelement location="C:/Users/José Montes/Desktop/DailyChallenge/DailyChallenge/DailyChallenge/DailyChallenge/compileTest/build/META-INF/persistence.xml" />
     </path>
- 
+    
+    <target name="compileTest">
+        <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="15">
+            <classpath refid="junit.class.path" />
+        </javac>
+        
+        <javac srcdir="${test.dir}" destdir="${build.dir}" includeantruntime="15">
+            <classpath refid="junit.class.path" />
+        </javac>
+    </target>
+    
     <target name="unit-test">
         <junit haltonerror="yes">
             <classpath refid="junit.class.path" />
@@ -32,7 +44,7 @@
             <test name="daily.test.beans.Test_AnwenderBean" />
             <formatter type="plain" />
         </junit>
-    </target>-->
+    </target>
               
     <!--
 
