--- a/DailyChallenge/DailyChallenge/nbproject/project.properties
+++ b/DailyChallenge/DailyChallenge/nbproject/project.properties
@@ -40,5 +40,7 @@ resource.dir=setup
 run.classpath=\
     ${libs.CopyLibs.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.jpa20-persistence.classpath}:\
+    ${libs.beans-binding.classpath}
 source.root=.
