José: Kleine Änderungen in Build.xml

--- a/DailyChallenge/DailyChallenge/build.xml
+++ b/DailyChallenge/DailyChallenge/build.xml
@@ -41,6 +41,7 @@
             
             <test name="daily.test.beans.Test_AnwenderBean" />
             <formatter type="plain" />
+            <formatter type="xml" />
         </junit>
     </target>
               
